k8s-manifests/istio/ingress-kiali.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gt-kiali-ingress
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "kiali.k3s.local"
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-kiali-ingress
  namespace: istio-system
spec:
  hosts:
    - "kiali.k3s.local"
  gateways:
    - gt-kiali-ingress
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local #servico no qual deseja expor
            port:
              number: 20001
      retries:
        attempts: 3
        perTryTimeout: 5s
