k8s-manifests/istio/ingress-prometheus.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gt-prometheus-ingress
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "prometheus.k3s.local"
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-prometheus-ingress
  namespace: istio-system
spec:
  hosts:
    - "prometheus.k3s.local"
  gateways:
    - gt-prometheus-ingress
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local #servico no qual deseja expor
            port:
              number: 9090
      retries:
        attempts: 3
        perTryTimeout: 5s
